# bookworm-backend-api

./: .env.example  pyproject.toml  requirements.txt  vercel.json
app/: config.py  deps.py  main.py
app/core/: rate_limit.py  security.py  timeutils.py
app/db/: container.py  memory_repository.py  repository.py  supabase_client.py  supabase_repository.py
app/models/: common.py  content.py  progress.py
app/routers/: books.py  content.py  cron.py
app/services/: auth_service.py  bookmark_service.py  content_service.py  jobs_service.py  leaderboard_service.py  notification_service.py  premium_service.py  progress_service.py  push_service.py  revenuecat_service.py  user_service.py  world_service.py
supabase/: schema.sql
tests/: test_content.py  test_goals_and_wrapped.py  test_notifications_jobs.py
