[project]
name = "bookworm-backend"
version = "1.0.0"
description = "Book-Worm API backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic[email]>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "supabase>=2.9,<3.0",
    "httpx>=0.27,<1.0",
    "PyJWT>=2.9,<3.0",
    "bcrypt>=4.2,<5.0",
    "python-multipart>=0.0.9",
    "firebase-admin>=6.5,<7.0",
    "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses Depends() in defaults

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
